--- a/Editor/LabelFromString.Editor.asmdef
+++ b/Editor/LabelFromString.Editor.asmdef
@@ -1,4 +1,7 @@
 {
 	"name": "LabelFromString.Editor",
-	"references":[ "GUID:5f304071514b0473a9596be24416e1de" ]
+	"references":[ "GUID:5f304071514b0473a9596be24416e1de" ],
+	"includePlatforms": [
+        "Editor"
+    	],
 }
